# Skillbox_33

./: CMakeLists.txt  README.md
include/: AverageArray.h  Basket.h  DataMultiMap.h  DataRegister.h  FishGame.h  OnlineStore.h  solutions.h  use_lib.h
src/: Basket.cpp  CMakeLists.txt  DataMultiMap.cpp  FishGame.cpp  OnlineStore.cpp  main.cpp  solution_1.cpp  solution_2.cpp  solution_3.cpp  solution_3_multimap.cpp  solution_3_vector.cpp  solution_4.cpp  use_lib.cpp
